--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -47,7 +47,7 @@ jobs:
           Rscript -e 'rmarkdown::render("README.md", output_format = "html_document", output_file = "index.html", output_dir = "public")'
       - name: Build xaringan presentation
         run: |
-          Rscript -e 'rmarkdown::render("./rmd/slide.Rmd", output_file = "index.html", output_dir = "public")'          
+          Rscript -e 'rmarkdown::render("./slide/index.Rmd", output_file = "index.html", output_dir = "public")'          
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
