--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -41,7 +41,13 @@ jobs:
       - name: Build xaringan presentation
         run: |
           Rscript -e 'rmarkdown::render("slide/index.Rmd", output_file = "index.html", output_dir = "public")'
-          
+       
+        - name: Copy css
+        run: |
+          cp slide/meliodas.css public/meliodas.css
+          cp slide/default.css public/default.css
+
+       
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
