--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -52,7 +52,8 @@ jobs:
        
       - name: Copy css + HTMLwidgets
         run: |
-          cp /home/runner/work/Workshop-MasterGIS2021/Workshop-MasterGIS2021/slide/libs /home/runner/work/Workshop-MasterGIS2021/Workshop-MasterGIS2021/public/
+          mkdir public/output
+          cp slide/output/* public/output/* 
           cp slide/meliodas.css public/meliodas.css
           cp slide/default.css public/default.css
           
